--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -61,7 +61,7 @@
         <%= book_comment.created_at.strftime('%Y/%m/%d') %>
 
         <% if book_comment.user == current_user %>
-          <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+          <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
         <% end %>
 
       <% end %>
@@ -69,7 +69,7 @@
 
       <div>
         <%= form_with model: [@book, @book_comment] do |f| %>
-        <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+        <%= f.text_area :comment, class: 'form-control', rows: '5', placeholder: "コメントをここに" %>
         <%= f.submit "送信" %>
       </div>
 
