--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -41,9 +41,27 @@
             <td>
               <%= book.body %>
             </td>
+            
             <td>
-              <%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %>
-              
+            <% if book.favorited_by?(current_user)%>
+            <p>
+              <%= link_to book_favorites_path(book), method: :delete do%>
+                <i class="fas fa-heart red"></i>
+                <%= book.favorites.count %> 
+              <% end %>
+            </p>
+            <% else %>
+            <p>
+              <%= link_to book_favorites_path(book), method: :post do%>
+                <i class="fas fa-heart"></i>
+                <%= book.favorites.count %> 
+              <% end %>
+            </p>
+            <% end %>
+            </td>
+            
+            <td>
+              <%= link_to "コメント数: #{book.book_comments.count} ", book_path(book.id) %>
             </td>
           </tr>
         <% end %>
