--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
               <%= book.body %>
             </td>
             <td>
-              <%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %>
+              <%= link_to "コメント数: #{book.book_comments.count} ", book_path(book.id) %>
               
             </td>
           </tr>
